@@ -9,20 +9,16 @@ import java.util.LinkedList;
 
 public class Player {
 
-    String nickname;
+    String name;
     Bag bag;
     LinkedList<Pokemon> team;
 
-    int turn;
-
-    public Player(String nickname, Bag bag, LinkedList<Pokemon> team) {
-        this.nickname = nickname;
+    public Player(String name, Bag bag, LinkedList<Pokemon> team) {
+        this.name = name;
         this.bag = bag;
         this.team = team;
     }
-    public String getNickname() {
-        return nickname;
-    }
+
     public Bag getInventory() {
         return bag;
     }
@@ -30,17 +26,19 @@ public class Player {
     public LinkedList<Pokemon> getTeam() {
         return team;
     }
+
     public Pokemon getPokemon(Pokemon pokemon) {
         return team.get(getTeam().indexOf(pokemon));
     }
+
     public Pokemon getFrontPokemon() {
-        return team.get(0);
+        return team.getFirst();
     }
 
     public void exchangePokemonToFront(Pokemon pokemon, Pokemon otherPokemon) {
         if(this.isFront(pokemon)) {
             int temp = team.indexOf(otherPokemon); // bulbizarre at ?
-            Pokemon tempPokemon = team.get(0); // temp Pokemon is pikachu
+            Pokemon tempPokemon = team.getFirst(); // temp Pokemon is pikachu
             team.set(0, otherPokemon); // set to 0 bulbizarre
             team.set(temp, tempPokemon); // set to ? pikachu
         } else {
@@ -71,8 +69,8 @@ public class Player {
         this.bag = bag;
     }
 
-    public void setNickname(String nickname) {
-        this.nickname = nickname;
+    public void setNickname(String name) {
+        this.name = name;
     }
 
     /// ------------------------------------------------------------------------------------------------------------------
